jilles      2006/11/29 00:47:32 UTC	(20061129-7307)
  Log:
  ircnet: fix SAVE processing
  

  Changes:	Modified:
  +1 -1		trunk/protocol/ircnet.c (File Modified) 


jilles      2006/11/27 23:56:16 UTC	(20061127-7305)
  Log:
  Convert xop commands to sourceinfo more fully.
  

  Changes:	Modified:
  +45 -45	trunk/modules/chanserv/xop.c (File Modified) 


jilles      2006/11/27 10:53:46 UTC	(20061127-7301)
  Log:
  Update release notes.
  

  Changes:	Modified:
  +12 -0	trunk/doc/RELEASE (File Modified) 


jilles      2006/11/27 10:30:15 UTC	(20061127-7299)
  Log:
  Add 't' version letter for chansvs::changets.
  

  Changes:	Modified:
  +1 -0		trunk/doc/VERSION_LETTERS (File Modified) 
  +2 -1		trunk/protocol/inspircd10.c (File Modified) 
  +2 -1		trunk/protocol/inspircd11.c (File Modified) 
  +2 -1		trunk/src/ctcp-common.c (File Modified) 
  +2 -1		trunk/src/ptasks.c (File Modified) 


jilles      2006/11/27 10:27:15 UTC	(20061127-7297)
  Log:
  Fix 'd' version letter for log system changes.
  

  Changes:	Modified:
  +1 -1		trunk/protocol/inspircd10.c (File Modified) 
  +1 -1		trunk/protocol/inspircd11.c (File Modified) 
  +1 -1		trunk/src/ctcp-common.c (File Modified) 
  +1 -1		trunk/src/ptasks.c (File Modified) 


jilles      2006/11/26 17:53:12 UTC	(20061126-7295)
  Log:
  Add /ns listvhost command.
  

  Changes:	Modified:
  +11 -0	trunk/help/nickserv/listvhost (File Added) 
  +11 -0	trunk/help/userserv/listvhost (File Added) 
  +36 -0	trunk/modules/nickserv/vhost.c (File Modified) 


jilles      2006/11/25 22:13:28 UTC	(20061125-7293)
  Log:
  Add localstatedir to all the other Makefile.in's.
  This fixes those pathnames for --enable-fhs-paths.
  

  Changes:	Modified:
  +1 -0		trunk/backend/Makefile.in (File Modified) 
  +1 -0		trunk/contrib/Makefile.in (File Modified) 
  +1 -0		trunk/crypto/Makefile.in (File Modified) 
  +1 -0		trunk/libatheme/Makefile.in (File Modified) 
  +1 -0		trunk/modules/Makefile.in (File Modified) 