@@ -1,3 +1,12 @@
+jilles      2006/11/29 17:43:12 UTC	(20061129-7309)
+  Log:
+  nickserv group: don't allow registering a UID
+  
+
+  Changes:	Modified:
+  +6 -0		trunk/modules/nickserv/group.c (File Modified) 
+
+
 jilles      2006/11/29 00:47:32 UTC	(20061129-7307)
   Log:
   ircnet: fix SAVE processing
